[gd_scene load_steps=35 format=3 uid="uid://dlysput6pdmqf"]

[ext_resource type="Script" uid="uid://cyld871lhhkux" path="res://src/Assets/kitchen-assets/wheat_flour.gd" id="1_v1kea"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="3_6p3ep"]
[ext_resource type="Animation" uid="uid://db62hs5s4n2b3" path="res://addons/godot-xr-tools/hands/animations/left/Grip 4.res" id="4_0xbau"]
[ext_resource type="Script" uid="uid://bmclcwctwu3gd" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="5_t1nep"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="6_v1kea"]
[ext_resource type="Animation" uid="uid://d1xnpyc08njjx" path="res://addons/godot-xr-tools/hands/animations/right/Grip 4.res" id="7_7samd"]
[ext_resource type="Texture2D" uid="uid://febxpfbrlrie" path="res://src/Assets/00-general-3d-assets/Flare00.PNG" id="7_vvvsd"]
[ext_resource type="PackedScene" uid="uid://c582k48bhro7q" path="res://src/Assets/kitchen-assets/glb/Wheat Flour1.glb" id="8_a7w3h"]
[ext_resource type="Script" uid="uid://dq86gvhe6d20d" path="res://addons/ateneo-virtual-reality-escape/inventory-system/inventory_item.gd" id="8_vvvsd"]
[ext_resource type="Texture2D" uid="uid://c3s1ukt1wg0gu" path="res://src/Assets/0x-house-assets/mansion draft2x_Wood_normal.png" id="9_6p3ep"]
[ext_resource type="Script" uid="uid://cg1lorgur84yy" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-actor/ois_actor_component.gd" id="11_4p7sa"]
[ext_resource type="Script" uid="uid://cgettxdui2mmi" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-state-machine/ois_one_hand_tool_asm.gd" id="12_nmn8p"]
[ext_resource type="Script" uid="uid://b4ao0gdf7khuq" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-colliders/ois_collider_area3d.gd" id="13_gdoq5"]
[ext_resource type="PackedScene" uid="uid://c1pv5eyb3pnow" path="res://src/Assets/00-general-3d-assets/grab_particle.tscn" id="14_7samd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tndqt"]
size = Vector3(0.121922, 0.129215, 0.106224)

[sub_resource type="Resource" id="Resource_mv4es"]
script = ExtResource("5_t1nep")
open_pose = ExtResource("4_0xbau")
closed_pose = ExtResource("4_0xbau")

[sub_resource type="Resource" id="Resource_qnege"]
script = ExtResource("5_t1nep")
open_pose = ExtResource("7_7samd")
closed_pose = ExtResource("7_7samd")

[sub_resource type="Curve" id="Curve_vm6bv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.77951, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_h4fn2"]
curve = SubResource("Curve_vm6bv")

[sub_resource type="Curve" id="Curve_uxxqw"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 360), 0.0, 0.0, 0, 0, Vector2(1, -360), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xgs2e"]
curve = SubResource("Curve_uxxqw")

[sub_resource type="Gradient" id="Gradient_eqc7q"]
colors = PackedColorArray(0.956927, 0.990137, 0.995663, 1, 0.999999, 0.988373, 0.986389, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lnlxa"]
gradient = SubResource("Gradient_eqc7q")

[sub_resource type="Curve" id="Curve_38850"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.486726, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_x8khj"]
curve = SubResource("Curve_38850")

[sub_resource type="Curve" id="Curve_sl68e"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hbsbo"]
curve = SubResource("Curve_sl68e")

[sub_resource type="Curve" id="Curve_w81y4"]
_limits = [-2.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yk0pt"]
curve = SubResource("Curve_w81y4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4hih4"]
lifetime_randomness = 1.0
emission_shape_scale = Vector3(4.125, 0.72, 3.355)
emission_shape = 1
emission_sphere_radius = 0.01
inherit_velocity_ratio = 0.05
direction = Vector3(0, 0, 0)
spread = 0.0
angular_velocity_curve = SubResource("CurveTexture_xgs2e")
orbit_velocity_curve = SubResource("CurveTexture_yk0pt")
gravity = Vector3(0, -0.5, 0)
scale_min = 0.01
scale_max = 0.02
color_ramp = SubResource("GradientTexture1D_lnlxa")
alpha_curve = SubResource("CurveTexture_h4fn2")
emission_curve = SubResource("CurveTexture_x8khj")
hue_variation_curve = SubResource("CurveTexture_hbsbo")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lcyhm"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("7_vvvsd")
uv1_scale = Vector3(1.015, 1.01, 13.465)

[sub_resource type="QuadMesh" id="QuadMesh_8xugr"]
material = SubResource("StandardMaterial3D_lcyhm")
size = Vector2(1.44, 1.31)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xbau"]
normal_enabled = true
normal_scale = -3.43
normal_texture = ExtResource("9_6p3ep")

[sub_resource type="SphereShape3D" id="SphereShape3D_eloll"]
radius = 0.0666457

[node name="Wheat Flour" type="RigidBody3D"]
collision_layer = 4
collision_mask = 196615
freeze_mode = 1
script = ExtResource("1_v1kea")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0104084, -0.00479701, 0.00682631)
shape = SubResource("BoxShape3D_tndqt")

[node name="GrabPointHandLeft" parent="." instance=ExtResource("3_6p3ep")]
transform = Transform3D(1, 0, 0, 0, 0.788011, -0.615662, 0, 0.615662, 0.788011, -0.0462619, 0.0363569, -0.0368551)
visible = true
hand_pose = SubResource("Resource_mv4es")

[node name="GrabPointHandRight" parent="." instance=ExtResource("6_v1kea")]
transform = Transform3D(1, 0, 0, 0, 0.788011, -0.615662, 0, 0.615662, 0.788011, 0.0578485, 0.0356365, -0.0363829)
visible = true
hand_pose = SubResource("Resource_qnege")

[node name="WheatFlourParticle" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0020439, 0.0721823, 0.0185388)
emitting = false
amount = 200
preprocess = 1.0
process_material = SubResource("ParticleProcessMaterial_4hih4")
draw_pass_1 = SubResource("QuadMesh_8xugr")

[node name="InventoryItem" type="Node3D" parent="." node_paths=PackedStringArray("defined_mesh", "defined_collision_shape")]
script = ExtResource("8_vvvsd")
unique = true
defined_mesh = NodePath("../Wheat Flour1")
defined_collision_shape = NodePath("../CollisionShape3D")
preferred_scale = 0.7
object_transform_adjustment = Vector3(0.01, 0, 0)

[node name="Wheat Flour1" parent="." instance=ExtResource("8_a7w3h")]
transform = Transform3D(0.065, 0, 0, 0, 0.065, 0, 0, 0, 0.065, 0.00826601, -0.0810465, 0.00830565)

[node name="Flour_001" parent="Wheat Flour1" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_0xbau")

[node name="OISActorComponent" type="Node3D" parent="."]
script = ExtResource("11_4p7sa")
receiver_group = "wheatflour"
metadata/_custom_type_script = "uid://cg1lorgur84yy"

[node name="OISOneHandToolASM" type="Node3D" parent="OISActorComponent"]
script = ExtResource("12_nmn8p")
metadata/_custom_type_script = "uid://cgettxdui2mmi"

[node name="OISColliderArea3D" type="Node3D" parent="OISActorComponent"]
script = ExtResource("13_gdoq5")
metadata/_custom_type_script = "uid://b4ao0gdf7khuq"

[node name="Area3D" type="Area3D" parent="OISActorComponent/OISColliderArea3D"]
collision_layer = 536870912
collision_mask = 536870912

[node name="CollisionShape3D" type="CollisionShape3D" parent="OISActorComponent/OISColliderArea3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00415476, 0.0948474, 0.0127995)
shape = SubResource("SphereShape3D_eloll")

[node name="GrabParticle" parent="." instance=ExtResource("14_7samd")]

[connection signal="grabbed" from="." to="." method="_on_grabbed"]
[connection signal="grabbed" from="." to="GrabParticle" method="_on_first_grab"]
[connection signal="released" from="." to="." method="_on_released"]

[editable path="Wheat Flour1"]
